updated some notes

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@ unique needs</p>
     </div>
   </div>
 
-  <img src="Images/Vector 2.png" alt="vector design" class="vector-design3">
+  <img src="Images/Vector 15.png" alt="vector design" class="vector-design3">
 </section>
 
 <section class="principles">
@@ -250,6 +250,7 @@ unique needs</p>
           <li><a href="news.html">News</a></li>
           <li><a href="investors.html">Investors</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="#"></a></li>
         </ul>
       </nav>
     </div>
