--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- MAIN -->
   <main>
     <section class="hero">
-    <img src="Images/Vector 2.png" alt="vector design" class="vector-design3">
+    <img src="Images/Vector 15.png" alt="vector design" class="vector-design3">
   <!-- LEFT: TEXT -->
   <div class="hero-left">
     <h1>We Drive Growth and Sustainable Impact</h1>
@@ -120,7 +120,7 @@
 </section>
 
     <section class="main-news" id="main-news">
-  <h1>News</h1>
+  <h1>NEWS</h1>
   <h3>We share with you the latest investment rounds, funding events, partnerships and more</h3>
 
   <div class="main-news-cards">
