--- a/portfolio.html
+++ b/portfolio.html
@@ -68,31 +68,47 @@
   <!-- Company Grid -->
   <div class="company-grid">
     <div class="company-card" data-industry="venture" data-country="lebanon">
+            <div class="company-img">
+
       <img src="Images/logo-05 1.png" alt="">
+      </div>
+      <div class="company-card-content">
       <h3>Nuwa</h3>
       <p>Lebanon | Venture | 2025</p>
+      </div>
     </div>
-
-    <div class="company-card" data-industry="fintech" data-country="uae">
-      <div class="company-img"></div>
-      <h3>Name</h3>
+  <div class="company-card" data-industry="fintech" data-country="uae">
+    <div class="company-img">
+      <img src="" alt="">
+    </div>
+          <div class="company-card-content">
+    <h3>Name</h3>
       <p>UAE | Fintech | 2023</p>
+      </div>
     </div>
 
     <div class="company-card" data-industry="healthtech" data-country="saudi">
-      <div class="company-img"></div>
+      <div class="company-img">
+        <img src="" alt="">
+      </div>
+            <div class="company-card-content">
+
       <h3>Name</h3>
       <p>Saudi Arabia | Healthtech | 2025</p>
+      </div>
     </div>
 
     <div class="company-card" data-industry="ai" data-country="uae">
-      <div class="company-img"></div>
-      <h3>Name</h3>
+      <div class="company-img">
+        <img src="" alt="">
+      </div>
+      <div class="company-card-content">
+        <h3>Name</h3>
       <p>UAE | AI | 2024</p>
     </div>
   </div>
-
-        <button class="dark center" onclick="window.location.href='contact.html'">Contact Us</button>
+  </div>
+   <button class="dark center" onclick="window.location.href='contact.html'">Contact Us</button>
 </section>
  <footer class="footer">
   <div class="footer-top">
