--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
     <div class="team-member">
       <img src="Images/PRO_15085.jpg" alt="Hadi Tarhini">
       <h3>Hadi Tarhini</h3>
-      <p><em>Intern</em></p>
+      <p><em>Development Intern</em></p>
     </div>
   </div>
 </section>
