--- a/team.html
+++ b/team.html
@@ -114,6 +114,8 @@
           <li><a href="news.html">News</a></li>
           <li><a href="investors.html">Investors</a></li>
         <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="#"></a></li>
+
         </ul>
       </nav>
     </div>
