--- a/entrepreneurs.html
+++ b/entrepreneurs.html
@@ -24,6 +24,8 @@
         <li><a href="entrepreneurs.html">Entrepreneurs</a></li>
         <li><a href="news.html">News</a></li>
         <li><a href="contact.html"><button class="light">Contact Us</button></a></li>
+                <li><a href="#"></a></li>
+
       </ul>
     </nav>
    
