--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
     <title>About Nuwa</title>
   <link rel="stylesheet" href="style.css?v=3">
 <link href="https://db.onlinewebfonts.com/c/082252176f1f4953cea2a7e5e9f300f4?family=Franklin+Gothic+Demi" rel="stylesheet">
-<link href="https://db.onlinewebfonts.com/c/e130d119682ecb567748343bf7f263b0?family=Franklin+Gothic+Book" rel="stylesheet"></head>
+<link href="https://db.onlinewebfonts.com/c/e130d119682ecb567748343bf7f263b0?family=Franklin+Gothic+Book" rel="stylesheet">
+</head>
 <body>
-  
     <!-- HEADER -->
   <header>
     <a href="index.html">
@@ -40,144 +40,138 @@
   </header>
    <!-- MAIN CONTENT -->
   <main>
-  <section class="about-hero">
-    <h1>
-      We co-build ventures<br>that <span class="typing-text"></span>
-    </h1>
-  </section>
+    <section class="about-hero">
+      <h1>
+        We co-build ventures<br>that <span class="typing-text"></span>
+      </h1>
+    </section>
 
-  <section class="about-us">
-    <img src="Images/Vector 2.png" alt="vector-design2" class="vector-design2">
-    <h1>WHO WE ARE</h1>
-    <p>NUWA Venture Partners is an innovative investment advisory and venture studio firm dedicated to fostering innovation and societal impact.</p>
-<p>We empower entrepreneurs and investors to drive transformative change across high-growth sectors, including EdTech, Agri-Tech, Health & Wellbeing, Clean Tech & Sustainability, Cybersecurity, and E-commerce & Marketplaces. Through a hybrid model combining venture studio and venture capital, we co-create and scale startups while offering strategic investment opportunities tailored for individual investors.</p>
-<p>
-Our unique ecosystem includes a specialized PhD innovation track, bridging the gap between groundbreaking ideas and scalable growth. By supporting researchers in commercializing their work, we foster deep-tech and socially impactful innovations that address global challenges.</p>
-<p>
-At Nuwa Venture Partners, we provide a comprehensive suite of services for entrepreneurs, including product development support, access to operational resources, mentorship, and funding. For investors, we curate high-potential startups aligned with both financial growth and measurable societal impact.</p>
+    <section class="about-us">
+      <img src="Images/Vector 2.png" alt="vector-design2" class="vector-design2">
+      <h1>WHO WE ARE</h1>
+      <p>NUWA Venture Partners is an innovative investment advisory and venture studio firm dedicated to fostering innovation and societal impact.</p>
+      <p>We empower entrepreneurs and investors to drive transformative change across high-growth sectors, including EdTech, Agri-Tech, Health & Wellbeing, Clean Tech & Sustainability, Cybersecurity, and E-commerce & Marketplaces. Through a hybrid model combining venture studio and venture capital, we co-create and scale startups while offering strategic investment opportunities tailored for individual investors.</p>
+      <p>Our unique ecosystem includes a specialized PhD innovation track, bridging the gap between groundbreaking ideas and scalable growth. By supporting researchers in commercializing their work, we foster deep-tech and socially impactful innovations that address global challenges.</p>
+      <p>At Nuwa Venture Partners, we provide a comprehensive suite of services for entrepreneurs, including product development support, access to operational resources, mentorship, and funding. For investors, we curate high-potential startups aligned with both financial growth and measurable societal impact.</p>
     </section>
     <section class="mission">
       <div class="mission-container">
-    <!-- Card 1 -->
-    <div class="mission-card">
-      <div class="circle">
-        <img src="Images/missionlogo.png" alt="Logo 1">
-      </div>
-      <div class="card-content">
-        <h1>MISSION</h1>
-        <p>To build and invest in startups <br> drive innovation, growth, <br>and positive societal impact</p>
-      </div>
-    </div>
+        <!-- Card 1 -->
+        <div class="mission-card">
+          <div class="circle">
+            <img src="Images/missionlogo.png" alt="Logo 1">
+          </div>
+          <div class="card-content">
+            <h1>MISSION</h1>
+            <p>To build and invest in startups <br> drive innovation, growth, <br>and positive societal impact</p>
+          </div>
+        </div>
 
-    <!-- Card 2 -->
-    <div class="Vision-card">
-      <div class="circle">
-        <img src="Images/visionlogo.svg" alt="Logo 2">
-      </div>
-      <div class="card-content">
-        <h1>VISION</h1>
-        <p>To transform ideas into scalable <br>ventures, taking companies from <br>incorporation to IPO</p>
-      </div>
-    </div>
+        <!-- Card 2 -->
+        <div class="Vision-card">
+          <div class="circle">
+            <img src="Images/visionlogo.svg" alt="Logo 2">
+          </div>
+          <div class="card-content">
+            <h1>VISION</h1>
+            <p>To transform ideas into scalable <br>ventures, taking companies from <br>incorporation to IPO</p>
+          </div>
+        </div>
 
-    <!-- Card 3 -->
-    <div class="Values-card">
-      <div class="circle">
-        <img src="Images/valueslogo.png" alt="Logo 3">
+        <!-- Card 3 -->
+        <div class="Values-card">
+          <div class="circle">
+            <img src="Images/valueslogo.png" alt="Logo 3">
+          </div>
+          <div class="card-content">
+            <h1>VALUES</h1>
+            <p>Act quickly and iterate early, <br>
+            Rely on data, not hype, <br>
+            Stay disciplined and agile, <br>
+            Adapt to each venture’s <br>
+            unique needs</p>
+          </div>
+        </div>
       </div>
-      <div class="card-content">
-        <h1>VALUES</h1>
-        <p>Act quickly and iterate early, <br>
-Rely on data, not hype, <br>
-Stay disciplined and agile, <br>
-Adapt to each venture’s <br>
-unique needs</p>
-      </div>
-    </div>
-  </div>
     </section>
     <section class="our-philosophy">
-  <div class="philosophy-content">
-    <div class="philosophy-image">
-  <img src="Images/seed1.png" alt="seed" class="seed-img1">
-  <img src="Images/seed.png" alt="Seed" class="seed-img">
-</div>
+      <div class="philosophy-content">
+        <div class="philosophy-image">
+          <img src="Images/seed1.png" alt="seed" class="seed-img1">
+          <img src="Images/seed.png" alt="Seed" class="seed-img">
+        </div>
 
-    <div class="philosophy-text">
-      <h1>OUR PHILOSOPHY</h1>
-      <p>Named after the Arabic word "NWA", meaning "seed", our name symbolizes growth, potential,
-         and new beginnings.</p>
+        <div class="philosophy-text">
+          <h1>OUR PHILOSOPHY</h1>
+          <p>Named after the Arabic word "NWA", meaning "seed", our name symbolizes growth, potential,
+            and new beginnings.</p>
 
-      <p>Additionally, it draws inspiration from the mythological figure Nuwa, who represents creation
-         and restoration. This dual symbolism reflects our mission of building ventures from the ground
-         up and revitalizing industries.</p>
+          <p>Additionally, it draws inspiration from the mythological figure Nuwa, who represents creation
+            and restoration. This dual symbolism reflects our mission of building ventures from the ground
+            up and revitalizing industries.</p>
 
-      <p>We aim to drive transformative change by empowering visionary founders building scalable,
-         tech-driven businesses that tackle the world’s most pressing challenges, delivering significant
-         value to entrepreneurs, researchers, and investors alike.</p>
+          <p>We aim to drive transformative change by empowering visionary founders building scalable,
+            tech-driven businesses that tackle the world’s most pressing challenges, delivering significant
+            value to entrepreneurs, researchers, and investors alike.</p>
 
-      <p>We are company builders before we are investors, and our co-founder mentality drives us to
-         prioritize responsibility and ownership.</p>
-    </div>
-  </div>
-
-  <img src="Images/Vector 15.png" alt="vector design" class="vector-design3">
-</section>
-
-<section class="principles">
-    <h2>Our Principles</h2>
-
-    <div class="principle">
-      <div class="left-box">
-        <h3><span>F</span>ast-Track Growth</h3>
+          <p>We are company builders before we are investors, and our co-founder mentality drives us to
+            prioritize responsibility and ownership.</p>
+        </div>
       </div>
-      <div class="right-box">
-        <p>
-          We move from ideas to action rapidly as we skip endless planning and take action allowing for prototyping, early testing and quick iterations.
-        </p>
-      </div>
-    </div>
+      <img src="Images/Vector 15.png" alt="vector design" class="vector-design3">
+    </section>
 
-    <div class="principle">
-      <div class="left-box">
-        <h3><span>A</span>nalytical Rigor</h3>
-      </div>
-      <div class="right-box">
-        <p>
-          We evaluate opportunities with realistic data, analyzing key metrics and scenarios to set grounded expectations, avoiding hype by focusing on proven metrics.
-        </p>
-      </div>
-    </div>
+    <section class="principles">
+        <h2>Our Principles</h2>
 
-    <div class="principle">
-      <div class="left-box">
-        <h3><span>S</span>ystematic Execution</h3>
-      </div>
-      <div class="right-box">
-        <p>
-          We make disciplined, speedy decisions by empowering teams and combining structured frameworks with agility to sustain fast progress.
-        </p>
-      </div>
-    </div>
+        <div class="principle">
+          <div class="left-box">
+            <h3><span>F</span>ast-Track Growth</h3>
+          </div>
+          <div class="right-box">
+            <p>
+              We move from ideas to action rapidly as we skip endless planning and take action allowing for prototyping, early testing and quick iterations.
+            </p>
+          </div>
+        </div>
 
-    <div class="principle">
-      <div class="left-box">
-        <h3><span>T</span>ailored Support</h3>
-      </div>
-      <div class="right-box">
-        <p>
-          We provide customized help for each startup by ensuring that each venture gets the tailored support it needs to grow and aligning resources and mentorship to each business’s unique needs.
-        </p>
-      </div>
-    </div>
-  </section>
+        <div class="principle">
+          <div class="left-box">
+            <h3><span>A</span>nalytical Rigor</h3>
+          </div>
+          <div class="right-box">
+            <p>
+              We evaluate opportunities with realistic data, analyzing key metrics and scenarios to set grounded expectations, avoiding hype by focusing on proven metrics.
+            </p>
+          </div>
+        </div>
+
+        <div class="principle">
+          <div class="left-box">
+            <h3><span>S</span>ystematic Execution</h3>
+          </div>
+          <div class="right-box">
+            <p>
+              We make disciplined, speedy decisions by empowering teams and combining structured frameworks with agility to sustain fast progress.
+            </p>
+          </div>
+        </div>
+
+        <div class="principle">
+          <div class="left-box">
+            <h3><span>T</span>ailored Support</h3>
+          </div>
+          <div class="right-box">
+            <p>
+              We provide customized help for each startup by ensuring that each venture gets the tailored support it needs to grow and aligning resources and mentorship to each business’s unique needs.
+            </p>
+          </div>
+        </div>
+      </section>
 
   <section class="sectors">
-  <h1>Our Sectors</h1>
-  <p class="subtitle">
-    Nuwa Venture Partners strategically targets sectors with
-    <em>high growth potential</em> and <em>societal impact</em>:
-  </p>
+    <h1>Our Sectors</h1>
+   
 
   <div class="sectors-grid">
     <div class="sector-item">
