--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
       <p>Great ventures start with great people.<br>
         If you’re passionate about innovation and impact, we’d love to hear from you. <br>
         Join our network and stay updated on new roles across NUWA and our portfolio companies.</p>
-      <button class="light">Apply</button>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_Thna6MzwSVd6musOSgphd7tDK37u8w-CqLk7erDZeBe34g/viewform?usp=dialog"><button class="light">Apply</button></a>
       </section>
  <footer class="footer">
   <div class="footer-top">
