--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Nuwa Venture Partners connects innovators and investors through cutting-edge technology and collaboration.">
+  <meta name="keywords" content="startup, investment, innovation, tech, venture">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <link rel="icon" href="Images/nuwaicon.svg.png" type="image/png">
   <title>Nuwa</title>
   <link rel="stylesheet" href="style.css?v=3">
-<link href="https://db.onlinewebfonts.com/c/082252176f1f4953cea2a7e5e9f300f4?family=Franklin+Gothic+Demi" rel="stylesheet">
-<link href="https://db.onlinewebfonts.com/c/e130d119682ecb567748343bf7f263b0?family=Franklin+Gothic+Book" rel="stylesheet">
+  <link href="https://db.onlinewebfonts.com/c/082252176f1f4953cea2a7e5e9f300f4?family=Franklin+Gothic+Demi" rel="stylesheet">
+  <link href="https://db.onlinewebfonts.com/c/e130d119682ecb567748343bf7f263b0?family=Franklin+Gothic+Book" rel="stylesheet">
 </head>
 <body>
   <div class="page-transition"></div>
@@ -30,128 +32,123 @@
         <li><a href="entrepreneurs.html">Entrepreneurs</a></li>
         <li><a href="news.html">News</a></li>
         <li><a href="contact.html"><button class="light">Contact Us</button></a></li>
-
       </ul>
     </nav>
    
     <div class="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
   <!-- MAIN -->
   <main>
     <section class="hero">
     <img src="Images/Vector 15.png" alt="vector design" class="vector-design3">
-  <!-- LEFT: TEXT -->
-  <div class="hero-left">
-    <h1>We Drive Growth and Sustainable Impact</h1>
-    <p><em>
+    <!-- LEFT: TEXT -->
+    <div class="hero-left">
+      <h1>We Drive Growth and Sustainable Impact</h1>
+      <p><em>
       NUWA Venture Partners is an innovative investment advisory and venture studio firm dedicated to fostering innovation and societal impact.
       We empower entrepreneurs, investors, and researchers to design, build, and scale ventures that deliver impact.
-    </em></p>
-    <a href="portfolio.html"><button class="light">Our Portfolio</button></a>
-  </div>
+      </em></p>
+      <a href="portfolio.html"><button class="light">Our Portfolio</button></a>
+    </div>
 
- <!-- RIGHT: IMAGE STACK -->
-<div class="hero-right">
-  <div class="image-stack">
-    <img src="Images/images (1).jpeg" class="stack-image active" alt="">
-    <img src="Images/logo.png" class="stack-image" alt="">
-    <img src="Images/images.jpeg" class="stack-image" alt="">
-  </div>
+      <!-- RIGHT: IMAGE STACK -->
+      <div class="hero-right">
+        <div class="image-stack">
+          <img src="Images/images (1).jpeg" class="stack-image active" alt="">
+          <img src="Images/logo.png" class="stack-image" alt="">
+          <img src="Images/images.jpeg" class="stack-image" alt="">
+        </div>
 
-  <div class="arrows">
-    <button class="arrow left">
-      <img src="Images/leftarrow.png" alt="Previous">
-    </button>
+        <div class="arrows">
+          <button class="arrow left">
+            <img src="Images/leftarrow.png" alt="Previous">
+          </button>
 
-    <button class="arrow right">
-      <img src="Images/rightarrow.png" alt="Next">
-    </button>
-  </div>
-</div>
-
-
-</section>
-
+          <button class="arrow right">
+            <img src="Images/rightarrow.png" alt="Next">
+          </button>
+        </div>
+      </div>
+    </section>
 
     <section class="why-nuwa" id="about">
         <img src="Images/Vector 2.png" alt="vector design" class="vector-design2">
-      <h1>WHY NUWA</h1>
-      <p>
+        <h1>WHY NUWA</h1>
+        <p>
         Unlike traditional investors, NUWA goes beyond capital. <br>
         We're venture builders,
         offering strategy, design, operations, and go-to-market support from seed to scale.
         Our FAST Framework ensures each startup grows with focus and efficiency:
-      </p>
-      <ul>
-        <li>Fast-Track Growth</li>
-        <li>Analytical Rigor</li>
-        <li>Systematic Execution</li>
-        <li>Tailored Support</li>
-      </ul>
-      <a href="about.html"><button class="dark">Explore</button></a>
+        </p>
+        <ul>
+          <li>Fast-Track Growth</li>
+          <li>Analytical Rigor</li>
+          <li>Systematic Execution</li>
+          <li>Tailored Support</li>
+        </ul>
+        <a href="about.html"><button class="dark">Explore</button></a>
     </section>
-<section class="team-section">
-  <div class="team-left">
-    <h2>Our</h2>
-    <h1>TEAM</h1>
-    <a href="team.html"><button class="explore-btn">Explore</button></a>
-  </div>
+    <section class="team-section">
+      <div class="team-left">
+        <h2>Our</h2>
+        <h1>TEAM</h1>
+        <a href="team.html"><button class="explore-btn">Explore</button></a>
+      </div>
 
-  <div class="team-carousel">
-    <div class="team-track">
-      <!-- Repeat photos as needed -->
-      <img src="Images/PRO_15085.jpg" alt="Team Member 1">
-      <img src="Images/PRO_15085.jpg" alt="Team Member 2">
-      <img src="Images/PRO_15085.jpg" alt="Team Member 3">
-      <img src="Images/PRO_15085.jpg" alt="Team Member 4">
-      <img src="Images/PRO_15085.jpg" alt="Team Member 5">
-      <!-- Duplicate for infinite loop -->
-      <img src="Images/PRO_15085.jpg" alt="Team Member 1">
-      <img src="Images/PRO_15085.jpg" alt="Team Member 2">
-      <img src="Images/PRO_15085.jpg" alt="Team Member 3">
-      <img src="Images/PRO_15085.jpg" alt="Team Member 4">
-      <img src="Images/PRO_15085.jpg" alt="Team Member 5">
-    </div>
-  </div>
-</section>
+      <div class="team-carousel">
+        <div class="team-track">
+          <!-- Repeat photos as needed -->
+          <img src="Images/PRO_15085.jpg" alt="Team Member 1">
+          <img src="Images/PRO_15085.jpg" alt="Team Member 2">
+          <img src="Images/PRO_15085.jpg" alt="Team Member 3">
+          <img src="Images/PRO_15085.jpg" alt="Team Member 4">
+          <img src="Images/PRO_15085.jpg" alt="Team Member 5">
+          <!-- Duplicate for infinite loop -->
+          <img src="Images/PRO_15085.jpg" alt="Team Member 1">
+          <img src="Images/PRO_15085.jpg" alt="Team Member 2">
+          <img src="Images/PRO_15085.jpg" alt="Team Member 3">
+          <img src="Images/PRO_15085.jpg" alt="Team Member 4">
+          <img src="Images/PRO_15085.jpg" alt="Team Member 5">
+        </div>
+      </div>
+    </section>
 
     <section class="main-news" id="main-news">
-  <h1>NEWS</h1>
-  <h3>We share with you the latest investment rounds, funding events, partnerships and more</h3>
+      <h1>NEWS</h1>
+      <h3>We share with you the latest investment rounds, funding events, partnerships and more</h3>
 
-  <div class="main-news-cards">
-    <div class="main-news-card">
-      <a href="#">
-        <img src="Images/download.jpeg" alt="ClearGrid funding news">
-      </a>
-      <a href="#" class="main-news-title">ClearGrid raises $10M to advance AI-driven debt collection</a>
-      <p class="main-news-date">October 2025</p>
-    </div>
+      <div class="main-news-cards">
+        <div class="main-news-card">
+          <a href="#">
+            <img src="Images/download.jpeg" alt="ClearGrid funding news">
+          </a>
+          <a href="#" class="main-news-title">ClearGrid raises $10M to advance AI-driven debt collection</a>
+          <p class="main-news-date">October 2025</p>
+        </div>
 
-    <div class="main-news-card">
-      <a href="#">
-        <img src="Images/download.jpeg" alt="Venture partnership news">
-      </a>
-      <a href="#" class="main-news-title">NUWA partners with MENA innovation hub</a>
-      <p class="main-news-date">September 2025</p>
-    </div>
+        <div class="main-news-card">
+          <a href="#">
+            <img src="Images/download.jpeg" alt="Venture partnership news">
+          </a>
+          <a href="#" class="main-news-title">NUWA partners with MENA innovation hub</a>
+          <p class="main-news-date">September 2025</p>
+        </div>
 
-    <div class="main-news-card">
-      <a href="#">
-        <img src="Images/download.jpeg" alt="Portfolio company milestone">
-      </a>
-      <a href="#" class="main-news-title">Portfolio company reaches 1M active users</a>
-      <p class="main-news-date">August 2025</p>
-    </div>
-  </div>
-
-        <button class="light center" onclick="window.location.href='news.html'">More News</button>
-</section> 
+        <div class="main-news-card">
+          <a href="#">
+            <img src="Images/download.jpeg" alt="Portfolio company milestone">
+          </a>
+          <a href="#" class="main-news-title">Portfolio company reaches 1M active users</a>
+          <p class="main-news-date">August 2025</p>
+        </div>
+      </div>
+      <button class="light center" onclick="window.location.href='news.html'">More News</button>
+    </section> 
     <section class="contact-us">
       <h1>BE THE NEXT BIG THING</h1>
       <p>We look for founders that are innovative, bold<br>
@@ -159,64 +156,65 @@
           If you have a powerful story and a great business plan,<br> 
           we want to hear from you.</p>
         <button class="dark center" onclick="window.location.href='contact.html'">Contact Us</button>
-      </section>
- <footer class="footer">
-  <div class="footer-top">
-    <!-- LEFT COLUMN: Logo + Location -->
-    <div class="footer-info">
-<a href="index.html">
-      <!-- Add the correct path or extension for your logo file -->
-      <img src="Images/logo-05 1.png" alt="Nuwa Logo" class="logo">
-    </a>      <p class="location">
-        Bashoura 1526 <br>
-        Av. General Foaad Chehab<br>
-        Beirut Central Building, Bloc A<br>
-        6th Floor, Unit 44<br>
-        Beirut, Lebanon<br>
-      </p>
-    </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-top">
+        <!-- LEFT COLUMN: Logo + Location -->
+        <div class="footer-info">
+    <a href="index.html">
+          <!-- Add the correct path or extension for your logo file -->
+          <img src="Images/logo-05 1.png" alt="Nuwa Logo" class="logo">
+        </a>      <p class="location">
+            Bashoura 1526 <br>
+            Av. General Foaad Chehab<br>
+            Beirut Central Building, Bloc A<br>
+            6th Floor, Unit 44<br>
+            Beirut, Lebanon<br>
+          </p>
+        </div>
 
-    <!-- RIGHT COLUMN: Nav Links -->
-    <div class="footer-nav">
-      <nav>
-        <ul class="main-nav">
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="https://maps.app.goo.gl/sL8hvPwxUWWMymtH8">Location</a></li>
-          <li><a href="#careers">Careers</a></li>
-          <li><a href="news.html">News</a></li>
-          <li><a href="investors.html">Investors</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="#"></a></li>
+        <!-- RIGHT COLUMN: Nav Links -->
+        <div class="footer-nav">
+          <nav>
+            <ul class="main-nav">
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="https://maps.app.goo.gl/sL8hvPwxUWWMymtH8">Location</a></li>
+              <li><a href="#careers">Careers</a></li>
+              <li><a href="news.html">News</a></li>
+              <li><a href="investors.html">Investors</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
 
+      <!-- NEWSLETTER -->
+      <div class="newsletter">
+        <p>Sign up to our newsletter</p>
+        <div class="newsletter-form">
+          <form action="https://formspree.io/f/xovpjjva" method="POST">
+            <input type="email" name="email" placeholder="Your email" required>
+            <button class="sign-up">Sign Up</button>
+          </form>
+        </div>
+      </div>
+
+      <!-- SECONDARY NAV -->
+      <div class="footer-bottom">
+        <ul class="secondary-nav">
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Principles</a></li>
+          <li><a href="#">Cookie Settings</a></li>
         </ul>
-      </nav>
-    </div>
-  </div>
-
-  <!-- NEWSLETTER -->
-  <div class="newsletter">
-    <p>Sign up to our newsletter</p>
-    <div class="newsletter-form">
-      <input type="email" placeholder="Your email">
-      <button class="sign-up">Sign Up</button>
-    </div>
-  </div>
-
-  <!-- SECONDARY NAV -->
-  <div class="footer-bottom">
-    <ul class="secondary-nav">
-      <li><a href="#">Terms</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Principles</a></li>
-      <li><a href="#">Cookie Settings</a></li>
-    </ul>
-  </div>
-</footer>
-<section class="copyright">
-  <p>© 2025 Nuwa Venture Partners. All rights reserved.<br>
-    No part of this website or its content may be reproduced or used without prior written permission from Nuwa Venture Partners.</p>
-</section>
+      </div>
+    </footer>
+    <section class="copyright">
+      <p>© 2025 Nuwa Venture Partners. All rights reserved.<br>
+        No part of this website or its content may be reproduced or used without prior written permission from Nuwa Venture Partners.</p>
+    </section>
   </main>
 
 <script>
@@ -252,6 +250,5 @@ hamburger.addEventListener('click', () => {
 });
 
 </script>
-
 </body>
 </html>
