--- a/team.html
+++ b/team.html
@@ -123,12 +123,14 @@
 
   <!-- NEWSLETTER -->
   <div class="newsletter">
-    <p>Sign up to our newsletter</p>
-    <div class="newsletter-form">
-      <input type="email" placeholder="Your email">
-      <button class="sign-up">Sign Up</button>
-    </div>
-  </div>
+        <p>Sign up to our newsletter</p>
+        <div class="newsletter-form">
+          <form action="https://formspree.io/f/xovpjjva" method="POST">
+            <input type="email" name="email" placeholder="Your email" required>
+            <button class="sign-up">Sign Up</button>
+          </form>
+        </div>
+      </div>
 
   <!-- SECONDARY NAV -->
   <div class="footer-bottom">
