--- a/investors.html
+++ b/investors.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
   <title>Nuwa</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=3">
 <link href="https://db.onlinewebfonts.com/c/082252176f1f4953cea2a7e5e9f300f4?family=Franklin+Gothic+Demi" rel="stylesheet">
 <link href="https://db.onlinewebfonts.com/c/e130d119682ecb567748343bf7f263b0?family=Franklin+Gothic+Book" rel="stylesheet">
 </head>
@@ -72,12 +75,14 @@
 
   <!-- NEWSLETTER -->
   <div class="newsletter">
-    <p>Sign up to our newsletter</p>
-    <div class="newsletter-form">
-      <input type="email" placeholder="Your email">
-      <button class="sign-up">Sign Up</button>
-    </div>
-  </div>
+        <p>Sign up to our newsletter</p>
+        <div class="newsletter-form">
+          <form action="https://formspree.io/f/xovpjjva" method="POST">
+            <input type="email" name="email" placeholder="Your email" required>
+            <button class="sign-up">Sign Up</button>
+          </form>
+        </div>
+      </div>
 
   <!-- SECONDARY NAV -->
   <div class="footer-bottom">
