--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta http-equiv="Expires" content="0">
   <link rel="icon" href="Images/nuwaicon.svg.png" type="image/png">
   <title>Nuwa</title>
-  <link rel="stylesheet" href="style.css?v=3">
+  <link rel="stylesheet" href="style.css?v=4">
   <link href="https://db.onlinewebfonts.com/c/082252176f1f4953cea2a7e5e9f300f4?family=Franklin+Gothic+Demi" rel="stylesheet">
   <link href="https://db.onlinewebfonts.com/c/e130d119682ecb567748343bf7f263b0?family=Franklin+Gothic+Book" rel="stylesheet">
 </head>
@@ -29,7 +29,7 @@
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="team.html">Team</a></li>
         <li><a href="investors.html">Investors</a></li>
-        <li><a href="entrepreneurs.html">Entrepreneurs</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSffRzufOkhBGjOMN0KskM-mlriZKt4yed9s6Idx6zblnKFwUA/viewform?fbzx=483654278199011405">Entrepreneurs</a></li>
         <li><a href="news.html">News</a></li>
         <li><a href="contact.html"><button class="light">Contact Us</button></a></li>
       </ul>
